@@ -1,3 +1,8 @@
+2009-01-07  Fred Kiefer <FredKiefer@gmx.de>
+
+	* ToolbarExample/SecondWindowOwner.m (-awakeFromNib): Adopt to
+	changes in NSToolbar. Now the toolbar retains the view.
+
 2009-01-01  Fred Kiefer <FredKiefer@gmx.de>
 
 	* GSTest/NSAnimation-test/AnimationView.m: Correct line endings.
